--- a/app/src/main/res/layout/activity_camera.xml
+++ b/app/src/main/res/layout/activity_camera.xml
@@ -6,18 +6,19 @@
 
     <com.gxj1228.customcamera.camera.CustomCameraPreview
         android:id="@+id/camera_surface"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_height="match_parent">
+
+
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
+            android:layout_height="match_parent"
+            android:visibility="gone"
             android:orientation="vertical">
 
             <TextView
@@ -32,8 +33,8 @@
 
             <LinearLayout
                 android:id="@+id/camera_crop_container"
-                android:layout_width="0dp"
-                android:layout_height="0dp"
+                android:layout_width="200dp"
+                android:layout_height="200dp"
                 android:orientation="horizontal">
 
                 <View
@@ -44,9 +45,11 @@
 
                 <ImageView
                     android:id="@+id/camera_crop"
-                    android:layout_width="0dp"
-                    android:layout_height="0dp"
+                    android:layout_width="200dp"
+                    android:layout_height="200dp"
                     android:scaleType="fitXY" />
+
+
 
                 <View
                     android:layout_width="0dp"
@@ -86,5 +89,14 @@
             </LinearLayout>
 
         </FrameLayout>
-    </LinearLayout>
+    </RelativeLayout>
+
+
+    <ImageView
+        android:id="@+id/crop"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@mipmap/camera_back"
+        android:layout_centerInParent="true"
+        />
 </RelativeLayout>
