--- a/app/src/main/res/layout/activity_camera.xml
+++ b/app/src/main/res/layout/activity_camera.xml
@@ -15,12 +15,11 @@
         android:layout_height="match_parent">
 
 
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:visibility="gone"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:visibility="gone">
 
             <TextView
                 android:layout_width="match_parent"
@@ -51,7 +50,6 @@
                     android:scaleType="fitXY" />
 
 
-
                 <View
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
@@ -65,6 +63,7 @@
         <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="136dp"
+            android:layout_alignParentBottom="true"
             android:background="@color/preview_mock">
 
             <LinearLayout
@@ -73,12 +72,6 @@
                 android:layout_height="match_parent"
                 android:gravity="center"
                 android:orientation="horizontal">
-
-                <ImageView
-                    android:id="@+id/camera_close"
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
-                    android:src="@mipmap/camera_close" />
 
                 <ImageView
                     android:id="@+id/camera_take"
@@ -92,12 +85,57 @@
         </FrameLayout>
     </RelativeLayout>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-    <ImageView
-        android:id="@+id/crop"
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:background="@color/preview_mock" />
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <View
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:background="@color/preview_mock" />
+
+            <ImageView
+                android:id="@+id/crop"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:background="@mipmap/camera_back" />
+
+            <View
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:background="@color/preview_mock" />
+        </LinearLayout>
+
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:background="@color/preview_mock" />
+    </LinearLayout>
+
+
+    <TextView
+        android:id="@+id/tv_re"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@mipmap/camera_back"
         android:layout_centerInParent="true"
-        />
+        android:textColor="#0f0"
+        android:textSize="30sp"
+        android:textStyle="bold" />
 </RelativeLayout>
